tests/ui/coroutine/resume-arg-late-bound.stderr
error: implementation of `Coroutine` is not general enough
  --> $DIR/resume-arg-late-bound.rs:15:5
   |
LL |     test(gen);
   |     ^^^^^^^^^ implementation of `Coroutine` is not general enough
   |
   = note: `{coroutine@$DIR/resume-arg-late-bound.rs:11:28: 11:44}` must implement `Coroutine<&'1 mut bool>`, for any two lifetimes `'0` and `'1`...
   = note: ...but it actually implements `Coroutine<&mut bool>`

error: aborting due to 1 previous error

